--- a/styles/main.css
+++ b/styles/main.css
@@ -88,14 +88,18 @@ a {
   width: 100%;
   max-width: 360px;
   height: 72px;
+  
   border-radius:8px;
+  
   display: flex;
   align-items: center;
+  
   margin-top: 40px;
+  
   background: var(--primary-color);
+  
   transition: 400ms;
-  /*justify-content: center;*/
-  color: white;
+    
 }
 
 #page-home main a:hover {
@@ -109,6 +113,7 @@ a {
   border-bottom-left-radius: 8px;
 
   background-color: rgba(0, 0, 0, 0.08);
+  
   display: flex;
   align-items: center;
   justify-content: center;
@@ -122,13 +127,14 @@ a {
 }
 
 #page-home main a strong {
-  flex: 0.5;
+  flex: 1;
+  color: white;
   text-align: center;
 }
 
 @media (max-width: 900px) {
-  #page-home{
-    background-position-x: 70px;
+  #page-home {
+    background-position-x: 70vw;
   }
 
   #page-home .content {
@@ -139,7 +145,7 @@ a {
   #page-home header a {
     position: absolute;
     bottom: 48px;
-    left: 50px;
+    left: 50%;
     transform: translateX(-50%);
   }
 
