--- a/styles/create-point.css
+++ b/styles/create-point.css
@@ -32,11 +32,12 @@
 form {
   background-color: white;
   
-  margin: 80px;
+  margin: 80px auto;
   margin-top: 80px;
   padding: 64px;
   border-radius: 8px;
   max-width: 730px;
+  box-sizing: border-box;
 
 }
 
