--- a/NLW2/web/src/pages/TeacherForm/styles.css
+++ b/NLW2/web/src/pages/TeacherForm/styles.css
@@ -42,6 +42,11 @@
   border-bottom: 1px solid var(--color-line-in-white);
 }
 
+#page-teacher-form main fieldset .input-block + .textarea-block,
+#page-teacher-form main fieldset .select-block + .input-block {
+  margin-top: 2.4rem;
+}
+
 #page-teacher-form main footer {
   padding: 4rem 2.4rem;
   background: var(--color-box-footer);
